--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,14 +11,12 @@
     <div class="content">
       <!--pinterest logo-->
       <img src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pin logo" class="img1" />
-      <p class="header">Register to see more</p>
+      <p class="header">Log in to see more</p>
   
-<form action="/register" method="post">
-  <input type="email" name='email' placeholder="Email" class="detail" /><br />
+<form action="/login" method="post">
   <input type="text" name='username' placeholder="username" class="detail" /><br />
-  <input type="text" name='fullname' placeholder="fullname" class="detail" /><br />
   <input type="password" name='password' placeholder="Password" class="detail" /><br />
-  <input class="btn int" type="submit" value="Register Account" class="detail" /><br />
+  <input class="btn int" type="submit" value="Login" class="detail" /><br />
   <!-- <button class="btn int" type="submit">Register Account</button> -->
 </form>
   
@@ -33,11 +31,11 @@
           <b>Terms of Service, Privacy policy.</b>
         </p>
         <hr />
-        <p>Already On Pinterest? <a href="/login">Login</a></p>
+        <p>Not on Pinterest yet? <a href="/">Register</a></p>
       </footer>
     </div>
   </div>
-  <a href="/login" class="upbtn">Login</a>
+  <a href="/" class="upbtn">Register</a>
   
 </body>
 </html>
