--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,13 @@
       <!--pinterest logo-->
       <img src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pin logo" class="img1" />
       <p class="header">Log in to see more</p>
-  
+      <% if (error.length > 0) { %>
+        <div class="error-message">
+            <p><%= error %></p>
+          </div>
+      <% }%>
+       
+      
 <form action="/login" method="post">
   <input type="text" name='username' placeholder="username" class="detail" /><br />
   <input type="password" name='password' placeholder="Password" class="detail" /><br />
