--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -153,3 +153,11 @@ hr {
   background-color: rgb(241, 236, 236);
   border-radius: 20px;
 }
+
+.error-message {
+  background-color: #ffcccc; /* Light red background */
+  padding: 10px;
+  border: 1px solid #ff0000; /* Red border */
+  border-radius: 5px;
+  margin-top: 10px;
+}
