--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,12 @@
       <!--pinterest logo-->
       <img src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pin logo" class="img1" />
       <p class="header">Register to see more</p>
+
+      <% if (error.length > 0) { %>
+        <div class="error-message">
+            <p><%= error %></p>
+          </div>
+      <% }%>
   
 <form action="/register" method="post">
   <input type="email" name='email' placeholder="Email" class="detail" /><br />
