--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -11,6 +11,37 @@
       background-color: #f4f4f4;
     }
 
+    header {
+      background-color: #b04d42; /* Red background color */
+      color: #df9aa9; /* White text color */
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 24px;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .navbar a {
+      color: #ead8d8; /* White text color */
+      text-decoration: none;
+      padding: 10px;
+      font-weight: light;
+    }
+
+    .navbar a:hover {
+      color: #ffffff; 
+      background-color: #e65656; /* Darker red on hover */
+      border-radius: 10px;
+    }
+
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -42,21 +73,25 @@
 </head>
 <body>
 
-<div class="gallery">
-  <div class="gallery-item">
-    <img src="https://i.pinimg.com/736x/c1/2b/47/c12b47446ac7738246f3e240f89198f5.jpg" alt="Image 1">
-    <div class="image-caption">Image 1</div>
+  <header>
+    <div class="logo">Pinterest</div>
+    <nav class="navbar">
+      <a href="/profile">Home</a>
+      <a href="/feed">Feed</a>
+      <a href="/logout">Logout</a>
+    </nav>
+  </header>
+
+  <div class="gallery">
+    <% posts.forEach((post) => { %>
+      
+      <div class="gallery-item">
+        
+        <img src="images/uploads/<%= post.image %>" alt="<%= post.imageText %>">
+        <div class="image-caption"><%= post.imageText %></div>
+      </div>
+    <% }) %>
   </div>
-  <div class="gallery-item">
-    <img src="https://i.pinimg.com/736x/c1/2b/47/c12b47446ac7738246f3e240f89198f5.jpg" alt="Image 2">
-    <div class="image-caption">Image 2</div>
-  </div>
-  <div class="gallery-item">
-    <img src="https://i.pinimg.com/736x/c1/2b/47/c12b47446ac7738246f3e240f89198f5.jpg" alt="Image 3">
-    <div class="image-caption">Image 3</div>
-  </div>
-  <!-- Add more gallery items as needed -->
-</div>
 
 </body>
 </html>
